tests/invalid/functor_ho_inst_bad_2.err_exp
functor_ho_inst_bad_2.m:031: In clause for `run(in, di, uo)':
functor_ho_inst_bad_2.m:031:   in argument 1 of the higher order call to the
functor_ho_inst_bad_2.m:031:   predicate variable `Pred':
functor_ho_inst_bad_2.m:031:   mode error: variable [38;5;87m`Result'[39;49m has
functor_ho_inst_bad_2.m:031:   instantiatedness [38;5;203m`free',[39;49m
functor_ho_inst_bad_2.m:031:   expected instantiatedness was [38;5;40m`ground'.[39;49m
For more information, recompile with `-E'.
